--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.7.0",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -19,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "redux-persist": "^6.0.0",
+    "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
